--- a/clean_data.ipynb
+++ b/clean_data.ipynb
@@ -506,113 +506,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "4f7d69bc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datetime import datetime, timedelta\n",
-    "import json\n",
-    "\n",
-    "def _parse_date_flexible(date_str):\n",
-    "    if not isinstance(date_str, str):\n",
-    "        return None\n",
-    "    s = date_str.strip()\n",
-    "    if not s:\n",
-    "        return None\n",
-    "    if s.lower() == \"present\":\n",
-    "        try:\n",
-    "            return datetime.strptime(PRESENT_DATE, \"%Y-%m-%d\")\n",
-    "        except Exception:\n",
-    "            return None\n",
-    "    for fmt in (\"%Y-%m-%d\", \"%Y/%m/%d\", \"%Y-%m\", \"%Y/%m\", \"%Y\", \"%b %Y\", \"%B %Y\"):\n",
-    "        try:\n",
-    "            return datetime.strptime(s, fmt)\n",
-    "        except Exception:\n",
-    "            pass\n",
-    "    return None\n",
-    "\n",
-    "def _format_like(dt, template):\n",
-    "    if not isinstance(template, str):\n",
-    "        return dt.strftime(\"%Y-%m-%d\")\n",
-    "    t = template.strip()\n",
-    "    if t.lower() == \"present\":\n",
-    "        return \"Present\"\n",
-    "    if len(t) == 4 and t.isdigit():\n",
-    "        return dt.strftime(\"%Y\")\n",
-    "    if \"-\" in t:\n",
-    "        parts = t.split(\"-\")\n",
-    "        if len(parts) == 2:\n",
-    "            return dt.strftime(\"%Y-%m\")\n",
-    "        if len(parts) >= 3:\n",
-    "            return dt.strftime(\"%Y-%m-%d\")\n",
-    "    if \"/\" in t:\n",
-    "        parts = t.split(\"/\")\n",
-    "        if len(parts) == 2:\n",
-    "            return dt.strftime(\"%Y/%m\")\n",
-    "        if len(parts) >= 3:\n",
-    "            return dt.strftime(\"%Y/%m/%d\")\n",
-    "    return dt.strftime(\"%Y-%m-%d\")\n",
-    "\n",
-    "def _fix_experience_json(experience_json):\n",
-    "    try:\n",
-    "        experiences = json.loads(experience_json)\n",
-    "    except Exception:\n",
-    "        return experience_json\n",
-    "\n",
-    "    if not isinstance(experiences, list) or len(experiences) == 0:\n",
-    "        return experience_json\n",
-    "\n",
-    "    for exp in experiences:\n",
-    "        if not isinstance(exp, dict):\n",
-    "            continue\n",
-    "        exp.pop(\"employment_type\", None)\n",
-    "        exp.pop(\"employmentType\", None)\n",
-    "\n",
-    "    for i in range(len(experiences) - 2, -1, -1):\n",
-    "        cur = experiences[i]\n",
-    "        nxt = experiences[i + 1]\n",
-    "        if not isinstance(cur, dict) or not isinstance(nxt, dict):\n",
-    "            continue\n",
-    "\n",
-    "        cur_dates = cur.get(\"dates\") if isinstance(cur.get(\"dates\"), dict) else {}\n",
-    "        nxt_dates = nxt.get(\"dates\") if isinstance(nxt.get(\"dates\"), dict) else {}\n",
-    "        cur[\"dates\"] = cur_dates\n",
-    "        nxt[\"dates\"] = nxt_dates\n",
-    "\n",
-    "        cur_end_str = cur_dates.get(\"end\", \"\")\n",
-    "        nxt_start_str = nxt_dates.get(\"start\", \"\")\n",
-    "\n",
-    "        cur_end_dt = _parse_date_flexible(cur_end_str)\n",
-    "        nxt_start_dt = _parse_date_flexible(nxt_start_str)\n",
-    "        if not cur_end_dt or not nxt_start_dt:\n",
-    "            continue\n",
-    "\n",
-    "        if cur_end_dt > nxt_start_dt:\n",
-    "            dur_years = cur.get(\"duration_calc\")\n",
-    "            if not isinstance(dur_years, (int, float)) or dur_years <= 0:\n",
-    "                cur_start_dt = _parse_date_flexible(cur_dates.get(\"start\", \"\"))\n",
-    "                if not cur_start_dt:\n",
-    "                    continue\n",
-    "                dur_years = max(0, (cur_end_dt - cur_start_dt).days / 365.25)\n",
-    "\n",
-    "            new_end_dt = nxt_start_dt\n",
-    "            new_start_dt = new_end_dt - timedelta(days=int(round(dur_years * 365.25)))\n",
-    "            if new_start_dt > new_end_dt:\n",
-    "                new_start_dt = new_end_dt\n",
-    "\n",
-    "            cur_start_str = cur_dates.get(\"start\", \"\")\n",
-    "            cur_dates[\"end\"] = _format_like(new_end_dt, cur_end_str)\n",
-    "            cur_dates[\"start\"] = _format_like(new_start_dt, cur_start_str)\n",
-    "\n",
-    "    return json.dumps(experiences)\n",
-    "\n",
-    "\n",
-    "df[\"experience\"] = df[\"experience\"].apply(_fix_experience_json)\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "9b1cf5b5",
    "metadata": {},
@@ -1264,26 +1157,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "d045df8f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def extract_years(time_str):\n",
-    "    try:\n",
-    "        return float(str(time_str).replace(' Years', '').strip())\n",
-    "    except:\n",
-    "        return 0.0\n",
-    "\n",
-    "senior_df = df[df['experience_level'] == 'senior'].copy()\n",
-    "mid_df = df[df['experience_level'] == 'mid'].copy()\n",
+    "senior_df = df[df['experience_level'] == 'senior']\n",
+    "mid_df = df[df['experience_level'] == 'mid']\n",
     "junior_df = df[df['experience_level'] == 'junior']\n",
     "\n",
-    "senior_df['_exp_years'] = senior_df['total_experience_time'].apply(extract_years)\n",
-    "mid_df['_exp_years'] = mid_df['total_experience_time'].apply(extract_years)\n",
-    "\n",
-    "senior_sample = senior_df.sort_values('_exp_years', ascending=False).head(700).drop(columns=['_exp_years'])\n",
-    "mid_sample = mid_df.sort_values('_exp_years', ascending=False).head(700).drop(columns=['_exp_years'])\n",
+    "senior_sample = senior_df.sample(n=min(700, len(senior_df)), random_state=42)\n",
+    "mid_sample = mid_df.sample(n=min(700, len(mid_df)), random_state=42)\n",
     "junior_sample = junior_df.sample(n=min(700, len(junior_df)), random_state=42)\n",
     "\n",
     "balanced_df = pd.concat([senior_sample, mid_sample, junior_sample], ignore_index=True)"
@@ -1337,7 +1221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
